# 2b-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml
config/: default.yaml
scripts/: remote-world.sh
src/: main.rs  parser.rs  service.rs
